k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: auth-service
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
